cluster/apps/external/nas/surveillance/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: surveillance
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 9901
---
apiVersion: v1
kind: Endpoints
metadata:
  name: surveillance
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.5
    ports:
      - port: 9901
---
