cluster/apps/external/nas/surveillance/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: &host "surveillance.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-surveillance
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: *host
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: surveillance
              port:
                number: 9901
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
